background change and slit layout change

--- a/06week/portfolio/css/style.css
+++ b/06week/portfolio/css/style.css
@@ -68,10 +68,14 @@ a{
 .name:hover a p.hello-label:after{
   content: "I'm Taylor Colten";
 }
+/*this is mobile phone view*/
 @media (min-width: 576px) {
   body{
     width: 100%;
 
   }
-  
+  .navi{
+    width: 100%,
+    
+  }
 }
