--- a/06week/Checkpoint2/css/style.css
+++ b/06week/Checkpoint2/css/style.css
@@ -5,6 +5,9 @@ body {
 }
 
 .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   font-size: 45px;
   height: 30vh;
   font-family: 'Charmonman', cursive;
@@ -19,43 +22,25 @@ body {
   font-family: 'Charmonman', cursive;
   font-family: 'Lobster', cursive;
   border: 2px solid black;
-  opacity: .5;
+  opacity: .7;
 }
 
-.contact {
-  position: absolute;
-  bottom:0;
-  width:30%;
-  height:160px;  
-  background: pink;
-  display: flex;
-  flex-direction: row;  
+form {
+  height: 200px;
+  display: grid;
+  grid-template-columns: 200px;
+  margin: 5px;
+  padding: 5px;  
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 25;
 }
-
-h1 {
-  text-align: center;
-}
-
-.name {
-  width: 150px;
-  height: 50px;
-  text-align: center;
-}
-
-.email {
-  width: 150px;
-  height: 50px;
-  text-align: center;
-}
-
-.message {
-  height: 50px;
-  width: 150px;
-  text-align: center;
 
 .copyright {
-  position:absolute;
-  bottom:0;
+  position: fixed;
+  bottom: 0;
 }
 
 
