--- a/lynn-portfolio/style.css
+++ b/lynn-portfolio/style.css
@@ -17,7 +17,7 @@ body {
   font-size: 14pt;
 }
 .portfoliocontainer {
-  background-color: yellow;
+  background-color: white;
 }
 a {
   color: teal;
