--- a/07week/calculator/css/style.css
+++ b/07week/calculator/css/style.css
@@ -48,7 +48,7 @@ input {
   width: 100%;
   height: 60px;
   padding: 1rem;
-  margin: 0 0 10px 2px;
+  margin-bottom: 10px;
   border: none;
   border-radius: 5px;
   background: #8f9b84;
@@ -58,7 +58,7 @@ input {
   font-size: 1rem;
   text-align: right;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 1px 1px 5px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 1px 1px 5px 1px rgba(0, 0, 0, .9);
   outline: none;
 }
 .button {
