--- a/07week/calculator/css/style.css
+++ b/07week/calculator/css/style.css
@@ -1,5 +1,5 @@
 input {
-    width: 119.5px;
+    width: 120px;
     margin-left: 2px
   }
   .button {
@@ -7,4 +7,11 @@ input {
     width: 26px;
     text-align: center;
     cursor: pointer;
+  }
+
+  #calc {
+      position: absolute;
+      left: 400px;
+      top: 250px;
+
   }
