got all features working except challenge feature

--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -3,12 +3,25 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 main {
   width: 100vw;
   height: 100vh;
+}
+
+h1,
+ul {
+  margin-bottom: 0;
+}
+
+span {
+  font-size: 1.2rem;
+  font-weight: 600;
+  display: block;
+  margin-bottom: 5px;
+  cursor: pointer;
 }
 
 .wrapper {
