--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font: bold 12px arial,helvetica,sans-serif;
+    font: bold 14px arial,helvetica,sans-serif;
     margin-left: 30%;
     padding: 0;
     background-color:white;
@@ -20,18 +20,18 @@ p{
 ul{
     margin: 0;
     padding: 0;
-
 }
+
 /*header*/
 
 header{
-    background:rgb(204, 203, 203);
-    color:#ffffff;
-    padding-top:20px;
-    min-height:200px;
-    border: 2px none;
-    border-radius:5px;
-    
+    background:url('./background.jpg');
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    color: white;
 }
 
 /*navigation bar and links*/
@@ -46,12 +46,14 @@ header{
     background-color:blue;
     position:fixed;
 }
+
 #navbar #nav{
     float:left;
     width:auto;
     padding-top:15px;
     border-radius:30px;
 }
+
 li{
    list-style-type: none;
    display: left;
@@ -60,10 +62,12 @@ li{
    overflow: hidden;
    width:100%
 }
+
 li a{
     text-decoration: none;
     color: #fafafa;
 }
+
 a{
     position:relative;
     display: inline-block;
@@ -72,6 +76,7 @@ a{
     font-size: 20px;
     padding:12px;
 }
+
 a::after{
     position: absolute;
     bottom: .3em;
@@ -92,10 +97,6 @@ a:hover::after{
 
 a:hover{
     color:silver;
-}
-#logo {
-    float:right;
-
 }
 
 /*Main content*/
