--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -48,7 +48,7 @@ span {
   left: 25%;
   border-radius: 25%;
   transition: all 200ms ease-in-out;
-  /* display: none; */
+  display: none;
 }
 
 .show-item {
