--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -20,7 +20,6 @@ ul {
 span {
   font-size: 1.2rem;
   font-weight: 600;
-  display: block;
   margin-bottom: 5px;
   cursor: default;
 }
@@ -38,14 +37,14 @@ span {
 .item {
   position: relative;
   max-width: 1000px;
-  min-height: 200px;
+  min-height: 150px;
 }
 
 .item-img {
   width: 150px;
   height: 150px;
   position: absolute;
-  left: 25%;
+  right: 0;
   border-radius: 25%;
   transition: all 200ms ease-in-out;
   display: none;
