updated portfolio page

--- a/lynn-portfolio/portfoliostyle.css
+++ b/lynn-portfolio/portfoliostyle.css
@@ -1,25 +1,29 @@
 .box1 {
     grid-area: box1;
-    background-color: black;
-    margin: 5px;
+    background-color: #eeeeee;
+    margin: 10px;
+    color: black;
   }
   
   .box2 {
     grid-area: box2;
-    background-color: black;
-    margin: 5px;
+    background-color: #eeeeee;
+    margin: 10px;
+    color: black;
   }
   
   .box3 {
     grid-area: box3;
-    background-color: black;
-    margin: 5px;
+    background-color: #eeeeee;
+    margin: 10px;
+    color: black;
   }
   
   .box4 {
     grid-area: box4;
-    background-color: black;
-    margin: 5px;
+    background-color: #eeeeee;
+    margin: 10px;
+    color: black;
   }
 
   /* Large and up (Desktops) */
@@ -27,12 +31,12 @@
     .box {
         display: grid;
         justify-content: center;
-        grid-template-columns: 300px 300px;
-        grid-template-rows: 300px 300px;
+        grid-template-columns: 30vw 30vw;
+        grid-template-rows: 30vw 30vw;
         grid-template-areas: 
         "box1 box2"
         "box3 box4";
-        background: #eeeeee;
+        background: white;
         padding: 10px;
       }
     }
