--- a/06week/fizzbuzz/css/style.css
+++ b/06week/fizzbuzz/css/style.css
@@ -4,9 +4,66 @@
 
 body {
   font-family: "Raleway", sans-serif;
+  background-image: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 main {
   width: 100vw;
   height: 100vh;
+}
+
+h1 {
+  text-align: center;
+}
+
+.container-main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+#input {
+  width: 300px;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 5px;
+}
+
+#button {
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+
+.container-inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  margin: 1rem;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    to top,
+    #c4c5c7 0%,
+    #dcdddf 52%,
+    #ebebeb 100%
+  );
+  box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
