--- a/06week/fizzbuzz/css/style.css
+++ b/06week/fizzbuzz/css/style.css
@@ -31,14 +31,38 @@ h1 {
 
 #input {
   width: 300px;
+  margin-top: 5rem;
   padding: 1rem;
   text-align: center;
   border-radius: 5px;
+  border: none;
+  box-shadow: inset 0px 1px 10px -2px rgba(0,0,0,0.6);
 }
 
 #button {
+  margin: 1rem 0;
+  padding: .5rem 1rem;
+  background: #c9ccd3;
+  background-image: linear-gradient(
+    to top,
+    #c4c5c7 0%,
+    #dcdddf 52%,
+    #ebebeb 100%
+  );
+  box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.5);
+  border: none;
   border-radius: 5px;
-  margin-top: 1rem;
+  cursor: pointer;
+  outline: none;
+  width: 150px;
+}
+#button:active {
+  background-image: linear-gradient(
+    to bottom,
+    #c4c5c7 0%,
+    #dcdddf 52%,
+    #ebebeb 100%
+  );
 }
 
 .container-inner {
