--- a/06week/fizzbuzz/css/style.css
+++ b/06week/fizzbuzz/css/style.css
@@ -34,11 +34,26 @@ h1 {
   padding: 1rem;
   text-align: center;
   border-radius: 5px;
+  box-shadow: inset 0px 2px 10px 0px rgba(0,0,0,0.55);
+  outline: none;
+  border: none;
 }
 
-#button {
+.button-container {
+  width: 200px;
+  margin: 1rem 0 2rem 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.button {
   border-radius: 5px;
-  margin-top: 1rem;
+  padding: .5rem 1rem;
+  outline: none;
+  cursor: pointer;
+  box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.5);
+  border: none;
+  height: 40px;
 }
 
 .container-inner {
