--- a/06week/fizzbuzz/css/style.css
+++ b/06week/fizzbuzz/css/style.css
@@ -69,9 +69,10 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
-  margin: 1rem;
+  font-size: .8rem;
+  width: 40px;
+  height: 40px;
+  margin: .5rem;
   background: #c9ccd3;
   background-image: linear-gradient(
     to top,
