Final -Updated portfolio -fixed a scrolling issue -

--- a/01week/resume/CSS.css
+++ b/01week/resume/CSS.css
@@ -1,4 +1,13 @@
 
+body{
+    background : url('retrowave-3-dimensional-artwork-neon-oceanchrome-eb-1920x1080.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
+
+}
+
+
 
 ul{
     list-style-type: none;
