--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -60,3 +60,8 @@ header {
   font-size: 50px;
   text-align: center;
 }
+
+#announce-game-won h1{
+  background-image: url(https://media.giphy.com/media/l0HlSDiA6WUytl9oA/giphy.gif);
+  height: 240px;
+}
