final copy updated

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -11,3 +11,21 @@ hr {
     color: black;
     border: 0px;
 }
+
+li {
+    text-align: inherit;
+    list-style-type: circle;
+    width: 55%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h2 {
+    color: #4d4d4d;
+    text-decoration: underline;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+}
