--- a/08week/dom-events/css/style.css
+++ b/08week/dom-events/css/style.css
@@ -5,9 +5,33 @@
 body {
   font-family: "Raleway", sans-serif;
   overflow-x: hidden;
+  text-align: center;
+  color: red;
+  font-size: 40px;
 }
 
 main {
   width: 100vw;
   height: 100vh;
+}
+
+.container-main {
+  width: 100%;
+  height: 100%;
+}
+
+.container-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.box {
+  height: 100px;
+  width: 100px;
+  background-color: blue
 }
