added count all and reset boxes

--- a/08week/dom-events/css/style.css
+++ b/08week/dom-events/css/style.css
@@ -23,7 +23,7 @@ main {
 .container-inner {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 75%;
   height: 100%;
@@ -33,5 +33,6 @@ main {
 .box {
   height: 100px;
   width: 100px;
-  background-color: blue
+  background-color: blue;
+  user-select: none;
 }
