bio draft; Created page, added images, videos, description, etc...

--- a/01week/resume/CSS.css
+++ b/01week/resume/CSS.css
@@ -1,6 +1,6 @@
 
 body{
-    background : url('retrowave-3-dimensional-artwork-neon-oceanchrome-eb-1920x1080.jpg');
+    background : url('images/retrowave-3-dimensional-artwork-neon-oceanchrome-eb-1920x1080.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
@@ -18,7 +18,7 @@ li{
     float:right;
     color:white;
     text-align:center;
-    width:15%;
+    width:12%;
     height:25px;
     padding: 10px;
     transition: background-color 0.5s ease;
@@ -38,6 +38,8 @@ a:active  {color:White; background-color:transparent; text-decoration:none}
 li:hover{
     background-color:#111111
 }
+
+
 
 h1{
     margin-bottom:0px;
@@ -80,6 +82,8 @@ header{
 
 p{
     padding-left: 3%;
+    padding-right: 3%;
+    text-indent: 50px; font-size:21px
 }
 
 
