changed content align rules on nav menu

--- a/css/home-nav-menu.css
+++ b/css/home-nav-menu.css
@@ -113,8 +113,8 @@ body {
 .dropdown-content.open {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   margin-bottom: 1rem;
-  margin-left: 15px;
 }
 
 .week,
