--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -156,6 +156,7 @@ main.body-open {
 .dropdown-content.open {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   margin-bottom: 1rem;
 }
 
