--- a/08week/dom-events/css/style.css
+++ b/08week/dom-events/css/style.css
@@ -3,11 +3,12 @@
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Roboto Mono", sans-serif;
   overflow-x: hidden;
   text-align: center;
   color: red;
-  font-size: 40px;
+  font-size: 2rem;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
 
 main {
@@ -33,6 +34,29 @@ main {
 .box {
   height: 100px;
   width: 100px;
-  background-color: blue;
+  color: #e7e5df;
+  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+    0px 18px 23px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   user-select: none;
+}
+
+#counter-1 {
+  background-color: #e74c3c;
+}
+#counter-10 {
+  background-color: #0077c0;
+}
+#counter-100 {
+  background-color: #0eac51;
+}
+#counter-all {
+  background-color: #f1892d;
+}
+#reset {
+  background-color: #707070;
 }
