added on hover border

--- a/08week/dom-events/css/style.css
+++ b/08week/dom-events/css/style.css
@@ -44,6 +44,9 @@ main {
   align-items: center;
   user-select: none;
 }
+.box:hover {
+  border: 2px solid #e7e5df;
+}
 
 #counter-1 {
   background-color: #e74c3c;
