--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -4,6 +4,15 @@
 
 body {
   font-family: "Raleway", sans-serif;
+  background-image: linear-gradient(
+    to top,
+    #d5d4d0 0%,
+    #d5d4d0 1%,
+    #eeeeec 31%,
+    #efeeec 75%,
+    #e9e9e7 100%
+  );
+  color: #303030;
 }
 
 main {
@@ -17,6 +26,10 @@ ul {
   margin-bottom: 0;
 }
 
+li {
+  color: #e0e0e0;
+}
+
 span {
   font-size: 1.2rem;
   font-weight: 600;
@@ -25,26 +38,57 @@ span {
 }
 
 .wrapper {
-  width: 90%;
+  width: 65%;
   height: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: flex-start;
+  padding: 1rem;
+}
+
+.cart-container {
+  opacity: .15;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem;
+  transition: all ease-in-out 200ms;
+}
+.cart-container:hover {
+  opacity: 1;
+}
+
+#main-title {
+  margin: 0;
+  color: #e0e0e0;
+}
+#item-count {
+  color: #e0e0e0;
+}
+.btn {
+  background: none;
+  border: none;
+  color: #e0e0e0;
 }
 
 .item {
   position: relative;
-  max-width: 1000px;
-  min-height: 150px;
+  max-width: 500px;
 }
 
 .item-img {
   width: 150px;
   height: 150px;
-  position: absolute;
-  right: 0;
+  float: right; /*actually found a use for floats in the wild!*/
+  margin: 0 0 1rem 1rem;
   border-radius: 25%;
   transition: all 200ms ease-in-out;
   display: none;
