Adding Landing Page:

--- a/01week/resume/css/backgrounds.css
+++ b/01week/resume/css/backgrounds.css
@@ -1,6 +1,6 @@
 
 
-.jumbotron {
+.jumbotron{
 	color: #2c3e50;
 	background: #dee6ed;
 }
@@ -14,19 +14,23 @@ article span{
 
 body {
 	background-color:#f8f8ff;
+	padding-left: 25px;
+	padding-right: 25px;
+	padding-top: 10px;
+	padding-bottom: 20px;
 
 }
 
 
 .tab-a {
 	position:absolute;
-	right: 50%;
+	right: 45%;
 }
 
 
 
 .tab-b {
 	position:absolute;
-	right: 120px;
+	right: 5%;
 }
 
