--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,22 +1,16 @@
 body {
-    color: blue; font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif
 
 }
 
 h1{ 
     color: black
-
 }
+
 h2 {
-    color: blueviolet;
-    border: 2px solid black;
     padding: 10px;
     margin: 5px;
 }
 
 img {height: 50%;
-}
-
-ul {
-    color: black;
 }
