created cart subfolder

--- a/07week/dom-practice/Cart/css/style.css
+++ b/07week/dom-practice/Cart/css/style.css
@@ -13,11 +13,12 @@ h2{
 #pcontainer{display: flex;
     flex-direction:column;
     justify-content:space-between;
-    width:80vw;
+    align-items:center;
+    width:80%;
 }
 p {display:flex;
     height: 50%;
-    padding:1em;
+    margin:1em;
     width:100%;
     align-items: center;
     border:1px solid #8C79E8;
