--- a/style.css
+++ b/style.css
@@ -1,1 +1,39 @@
-/* You can style your links page here */
+body{
+    margin:auto;
+    width:1000px;
+    height:1450px;
+
+}
+header{
+    text-align: center;
+    
+}
+h1{
+
+}
+
+article{
+    margin-left:5%;
+    margin-top:10px;
+    width:240px;
+    height:135px;
+    border:2px solid black;
+    display:inline-block;
+}
+
+img{
+    width:240px;
+    margin:none;
+    display:inline-block;
+}
+
+#wrapper{
+    width:1000px;
+    height:1450px;
+    background-color:tan;
+}
+
+article:nth-of-type(10){
+    background-color:red;
+    margin-left:35%;
+}
