--- a/style.css
+++ b/style.css
@@ -1,39 +1,77 @@
 body{
     margin:auto;
-    width:1000px;
-    height:1450px;
-
+    width:1400px;
+  
+    background: url(images/background.jpg);
+    background-repeat: no-repeat;
+    background-size: 1920px;
 }
 header{
     text-align: center;
-    
+    margin-bottom:0;
 }
 h1{
-
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 75px;
+    padding:0;
+    margin-top:15px;
+    margin-bottom:15px;
+    border-bottom: 5px solid white;
 }
 
 article{
-    margin-left:5%;
-    margin-top:10px;
-    width:240px;
+    margin-left:7%;
+    margin-top:100px;
+    width:22%;
     height:135px;
-    border:2px solid black;
+    
     display:inline-block;
+    
 }
 
 img{
-    width:240px;
+    position: absolute;
+    width:20%;
     margin:none;
     display:inline-block;
+   
 }
 
 #wrapper{
-    width:1000px;
-    height:1450px;
-    background-color:tan;
+    width:1400px;
+  
+   
 }
 
 article:nth-of-type(10){
     background-color:red;
-    margin-left:35%;
+    margin-left:36.2%;
+}
+
+article:nth-of-type(1) , article:nth-of-type(2), article:nth-of-type(3){
+    margin-top:0;
+}
+
+
+img:hover{
+    opacity:0;
+    
+}
+
+.top{
+    -webkit-transition: opacity 1s ease-in-out;
+}
+
+img.social{
+    position: relative;
+    width:50px;
+    border:none;
+}
+
+img.social:hover{
+    opacity:1;
+}
+
+footer{
+    margin-top: 150px;
 }
