final, it just looks beautiful

--- a/style.css
+++ b/style.css
@@ -19,33 +19,35 @@ h1{
     border-bottom: 5px solid white;
 }
 
-article{
-    margin-left:7%;
-    margin-top:100px;
-    width:22%;
-    height:135px;
-    
-    display:inline-block;
+h2{
+    font-family: 'Times New Roman', Times, serif;
+    font-size:50px;
+    position: absolute;
+    padding:76px;
+    width:11.8%;
+    text-align:center;
+    margin-top:0;
+    border:2px solid white;
     
 }
+article h2:nth-child(2){
+    font-size:40px;
+    border:none;
+    margin-top:50px;
+}
 
-img{
-    position: absolute;
-    width:20%;
-    margin:none;
+article{
+    margin-left:5%;
+    margin-top:70px;
+    width:27%;
+    height:214px;
+    background-color:rgba(0, 0, 0, 0.486);
     display:inline-block;
-   
+    
 }
 
 #wrapper{
     width:1400px;
-  
-   
-}
-
-article:nth-of-type(10){
-    background-color:red;
-    margin-left:36.2%;
 }
 
 article:nth-of-type(1) , article:nth-of-type(2), article:nth-of-type(3){
@@ -53,7 +55,7 @@ article:nth-of-type(1) , article:nth-of-type(2), article:nth-of-type(3){
 }
 
 
-img:hover{
+img.top:hover{
     opacity:0;
     
 }
@@ -68,10 +70,15 @@ img.social{
     border:none;
 }
 
-img.social:hover{
-    opacity:1;
+img.top{
+    position: absolute;
+    width:20%;
+    margin:none;
+    display:inline-block;
+   
 }
 
+
 footer{
-    margin-top: 150px;
+    margin-top: 90px;
 }
