--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -6,6 +6,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 2px 4px 18px #888888;
 }
 
 section {
@@ -13,9 +14,11 @@ section {
     border: 2px solid black;
     border-radius: 10px;
     margin: 4px;
-    width:85%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
+    padding: 10px;
+    box-shadow: 2px 4px 18px #888888;
 }
 
 ul {
