changes made to text

--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -1,18 +1,12 @@
-body{
-    font-family: 'Roboto Condensed', sans-serif;
+body {
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-section > ul > li{
-    list-style: none;
-    
+section > ul > li {
+  list-style: none;
 }
 
-
-
-
-section{
-    margin-left: 5%;
-    text-align: left;
-    
+section {
+  margin-left: 5%;
+  text-align: left;
 }
-
