--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -55,18 +55,18 @@ body {
   grid-template-columns: 1fr;
   justify-items: center;
   grid-gap: 1em;
-  grid-template-areas: 
-  "header" 
-  "box1" 
-  "box2" 
-  "box3" 
-  "box4" 
-  "box5" 
-  "box6" 
-  "box7" 
-  "box8" 
-  "box9" 
-  "box10"
+  grid-template-areas:
+    "header"
+    "box1"
+    "box2"
+    "box3"
+    "box4"
+    "box5"
+    "box6"
+    "box7"
+    "box8"
+    "box9"
+    "box10"
 }
 
 .insidebox {
@@ -91,28 +91,29 @@ body {
     grid-template-rows: auto;
     grid-gap: 5em;
     justify-items: space-around;
-    grid-template-areas: 
-    "header header" 
-    "box1 box1" 
-    "box1 box1" 
-    "box2 box3" 
-    "box4 box4"
+    grid-template-areas:
+      "header header"
+      "box1 box1"
+      "box1 box1"
+      "box2 box3"
+      "box4 box4"
   }
+}
 
 @media (min-width: 1200px) {
   .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 4;
-    grid-gap: 
     justify-items: space-around;
-    grid-template-areas: 
-    "header header header header" 
-    "box1 box1 box2 box2" 
-    "box3 box3 box4 box5" 
-    "box3 box3 box6 box6" 
-    "box7 box8 box9 box10"
+    grid-template-areas:
+      "header header header header"
+      "box1 box1 box2 box2"
+      "box3 box3 box4 box5"
+      "box3 box3 box6 box6"
+      "box7 box8 box9 box10"
   }
+
   .box {
     min-height: 100px;
     width: 90%;
