--- a/style.css
+++ b/style.css
@@ -24,10 +24,13 @@ h2{
     font-size:50px;
     position: absolute;
     padding:76px;
+    padding-top:50px;
+    padding-bottom:102px;
     width:11.8%;
     text-align:center;
     margin-top:0;
     border:2px solid white;
+    min-width: 222px;
     
 }
 article h2:nth-child(2){
@@ -48,6 +51,7 @@ article{
 
 #wrapper{
     width:1400px;
+    
 }
 
 article:nth-of-type(1) , article:nth-of-type(2), article:nth-of-type(3){
@@ -61,7 +65,8 @@ img.top:hover{
 }
 
 .top{
-    -webkit-transition: opacity 1s ease-in-out;
+    -webkit-transition: opacity 0.7s ease-in-out;
+    min-width: 380px;
 }
 
 img.social{
@@ -80,5 +85,5 @@ img.top{
 
 
 footer{
-    margin-top: 90px;
+    margin-top: 70px;
 }
