spiced up design

--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -3,6 +3,8 @@
 }
 
 body {
+  background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
+  background-blend-mode: normal, lighten, soft-light;
   font-family: "Raleway", sans-serif;
   overflow-x: hidden;
 }
@@ -23,12 +25,16 @@ main {
 div[data-cell] {
   width: 100px;
   height: 100px;
-  background-color: #f2f2f2;
+  background-color: rgba(0, 0, 0, 0.10);
+  color: #e0e0e0;
   float: left;
-  border: 1px solid #808080;
+  border: 1px solid #303030;
   font-size: 100px;
   text-align: center;
   user-select: none;
+}
+div[data-cell]:hover {
+  background-color: rgba(0, 0, 0, 0.50);
 }
 
 .row {
