added color feature to x's and o's

--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -37,6 +37,13 @@ div[data-cell]:hover {
   background-color: rgba(0, 0, 0, 0.50);
 }
 
+div[data-cell].color1 {
+  color: #E74C3C;
+}
+div[data-cell].color2 {
+  color: #0077C0
+}
+
 .row {
   clear: both;
 }
