--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-/* You can style your links page here */
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.box-01 {
+    border: 2px solid black;
+}
