--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -1,9 +1,12 @@
 
 /* real style */
-body{
-  font-family: 'Abril Fatface', cursive;
-  background-color:cadetblue;
-
+body{display:flex;
+  justify-content: center;
+  width:100%;
+  height:100vh;
+  font-family: 'Montserrat', sans-serif;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 #tictactoe{
   display:flex;
@@ -18,38 +21,42 @@ body{
   cursor: pointer;
   width: 100px;
   height: 100px;
-  background-color: #f2f2f2;
+  background-color: #cff0f5;
   float: left;
-  border: 1px solid #808080;
+  border: 1px solid #5e5d48;
   font-size: 4em;
   text-align: center;
   align-items: center
 }
 #cell-1, #cell-2, #cell-3 {
-  border-top: none;
+
 }
 #cell-3, #cell-6, #cell-9 {
-  border-right: none;
+
 }
 #cell-7, #cell-8, #cell-9 {
-  border-bottom: none;
+
 }
 #cell-1, #cell-4, #cell-7 {
-  border-left: none;
+ 
 }
 .o {
-  color: #45d632;
+  color: #666666;
 }
 .x {
-  color: #001ba1;
+  color: #313961;
 }
 .gameboard {
   margin-top:20px;
   display:flex;
   align-content:center;
   border-collapse: collapse;
+  -webkit-box-shadow: -26px 22px 5px 0px rgba(171,171,171,0.58);
+-moz-box-shadow: -26px 22px 5px 0px rgba(171,171,171,0.58);
+box-shadow: -26px 22px 5px 0px rgba(171,171,171,0.58);
 }
 .scoreboard {
+  margin-top:15px;
   padding: 0.5rem;
   text-align: center;
 }
@@ -64,8 +71,8 @@ body{
   color:whitesmoke;
   cursor: pointer;
   text-align: center;
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Montserrat', sans-serif;
 }
 .reset:hover {
-  background: rgba(255,255,255,0.5);
+  background: rgba(116, 116, 116, 0.637);
 }
