updating style changes to reflect HTML readability

--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 body {
-  background-image: url(./Images.jpg/backblue.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 110vw;
-  height: 100vh;
-  font-size: 25px;
-  text-align: left;
+  background: #95a5a6;
+}
+
+header {
+  text-align: center;
+}
+
+main {
+  text-align: center;
 }
 
 a {
   color: black;
   text-transform: uppercase;
+  
 }
 
 ul {
@@ -19,7 +22,11 @@ ul {
 
 li {
   padding: 10px;
-  transition: ease-in-out 1s;
+  transition: ease-in-out 2s;
 }
 
+footer {
+  position: fixed;
+  bottom: 0;
+}
 
