--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -1,18 +1,27 @@
-div[data-cell] {
-  width: 100px;
-  height: 100px;
-  background-color: #f2f2f2;
-  float: left;
-  border: 1px solid #808080;
-  font-size: 100px;
+body {
+  margin: 0;
+  margin-top: 50px;
+  background-color: #333;
   text-align: center;
 }
 
-.row {
-  clear: both;
+.col {
+  color: rgb(33, 146, 245);
+  display: inline-block;
+  width: 100px;
+  height: 80px;
+
+  background-color: white;
+  margin-top: 2px;
+  font-size: 80px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  padding-top: 0;
+  border: red 2px solid;
 }
 
-#announce-winner {
-  clear: both;
-  font-size: 50px;
+button {
+  padding: 20px;
+  font-size: 20px;
+  margin-top: 10px;
 }
