--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -6,18 +6,17 @@ body {
 }
 
 .col {
-  color: rgb(33, 146, 245);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;  
+  border: red 2px solid;    
   display: inline-block;
-  width: 100px;
+  width: 80px;
   height: 80px;
-
+  text-align: center;
   background-color: white;
   margin-top: 2px;
   font-size: 80px;
-  font-family: Arial, Helvetica, sans-serif;
   padding: 10px;
-  padding-top: 0;
-  border: red 2px solid;
 }
 
 button {
