--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
 /* You can style your links page here */
+h1 {
+    font-family: ubuntu;
+    text-align: center;
+}
+
+h2 {
+    font-family: cabin;
+}
+
+a {
+    font-family: cabin;
+    text-decoration: none;
+}
+main {
+    text-align: center;
+}
+
