working on asides

--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
-/* You can style your links page here */
+body {
+    background-image: url("./diamond_upholstery.png")
+}
 h1 {
     font-family: ubuntu;
-    float: left;
 }
 
 h2 {
     font-family: cabin;
+}
+
+aside {
+    background-image: url("./greyfloral.png")
 }
 
 a {
