Added bio and project pages

--- a/style.css
+++ b/style.css
@@ -1,1 +1,100 @@
 /* You can style your links page here */
+body, html {
+    background-color: #000;
+    color: #fff;
+    font-family: 'Space Mono', 
+    monospace;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+}
+
+.hero {
+    border: 1px solid #7ec1dd;
+    width: 100%;
+    padding: 0px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    float: center;
+}
+
+.projectLayout {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 800px;
+    border-left: 1px solid #7ec1dd;
+    border-right: 1px solid #7ec1dd;
+    border-bottom: 1px solid #7ec1dd;
+    padding: 40px 10px 0px 10px;
+}
+
+.week {
+    border: 1px solid #7ec1dd;
+    /* max-width: 500px; */
+    min-width: 340px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 20px 40px 20px;
+}
+
+
+.date {
+    color: #b2e048;
+    height: 100%;
+    width: 40px;
+    border-left: 1px solid #7ec1dd;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: right;
+    margin: 0px 0px 0px 0px;
+
+}
+
+h1 {
+    font-weight: 400;
+    font-size: 16px;
+    margin: 0px;
+    width: 100%;
+    padding: 4px 40px 4px 10px;
+}
+
+h2 {
+    font-weight: 400;
+    font-size: 16px;
+    margin: 0px;
+    padding: 4px 40px 4px 10px;
+}
+
+hr {
+    margin: 0;
+    border-style: none;
+    border-bottom: 1px solid #7ec1dd;
+}
+
+p {
+    color: #ea3d71;
+    margin: 0px;
+    padding: 4px 40px 4px 10px;
+}
+
+a {
+    font-size: 16px;
+    margin: 0px;
+    color: #e6db7d;
+    padding: 0px 40px 4px 10px;
+}
+
+.disabled {
+    pointer-events: none;
+    cursor: default;
+    color: #e6db7d80;
+
+}
