--- a/style.css
+++ b/style.css
@@ -1,1 +1,93 @@
-/* You can style your links page here */
+/* You can style your links page here */ 
+
+h1.top {
+
+	text-transform: uppercase;
+	text-align: center;
+	padding-top: 80px;
+	padding-bottom: 50px;
+	border-bottom: 3px #f1f1f1;
+
+/*	font-family: "Merienda";*/
+/*h1 stying for the top of page only*/
+
+}
+
+h2.projectheader {
+	margin-left: 150px;
+}
+
+section > a {
+	margin-left: 60px;
+	font-size: 20px;
+}
+.navbar-light {
+	width: 700px;
+	
+}
+
+h3 {
+	margin-left: 60px;
+}
+
+body {
+	font-family:"Dosis";
+}
+
+hr {
+	border: 0;
+	height: 1px;
+	background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+}
+
+
+img {
+	float: left;
+	margin: 3%;
+}
+
+
+div.position {
+	position: relative;
+	width:950px;
+	left: 100px;
+	top: 100px;
+
+}
+
+footer {
+
+	width: 100%;
+	min-height: 50px;
+	text-align: center;
+
+
+}
+
+i {
+	font-size: 1.2em;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+
+
+.fa-git {
+	color: b;
+
+}	
+
+.fa-linkedin {
+	color: #3C4FF1;
+
+}
+
+.fa-envelope-square {
+	color: #C1BCBC;
+
+}
+
+.fa-jsfiddle {
+	color: black;
+
+}
