--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
-    background-image: url("./diamond_upholstery.png")
+    background-image: url("./imageslanding/diamond_upholstery.png");
 }
+
+main {
+
+}
+
 h1 {
     font-family: ubuntu;
 }
@@ -9,9 +14,11 @@ h2 {
     font-family: cabin;
 }
 
-aside {
-    background-image: url("./greyfloral.png")
-}
+/* .week {
+    background-image: url("./imageslanding/greyfloral.png");
+    padding: 5px;
+    border-radius: 12px;
+} */
 
 a {
     font-family: cabin;
