final. added photos and nav bar w/ hover

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,6 +1,34 @@
 body {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url("../images/dust_scratches.png");
 
+}
+
+/* ---------------------------------------- */
+.navbar {
+    overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #333333;
+    position: relative;
+    display: flex;
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    background-color: #55644C;
+    color: #D4FDFF;
+}
+
+main {
+     display: block;
 }
 
 h1{ 
@@ -12,6 +40,4 @@ h2 {
     margin: 5px;
 }
 
-img {
-    float: right;
-}
+
