--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     background-image: url("./imageslanding/diamond_upholstery.png");
 }
 
+header {
+    position: fixed;
+}
 main {
 
 }
@@ -14,11 +17,6 @@ h2 {
     font-family: cabin;
 }
 
-/* .week {
-    background-image: url("./imageslanding/greyfloral.png");
-    padding: 5px;
-    border-radius: 12px;
-} */
 
 a {
     font-family: cabin;
