--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -40,4 +40,15 @@ h2 {
     margin: 5px;
 }
 
+.lamar {
+    float: left;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.hrc {
+    float: left;
+    padding-left: 15px;
+    padding-right: 25px;
+}
 
