final. added logos to job experience. added boxes.

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -40,6 +40,44 @@ h2 {
     margin: 5px;
 }
 
+.summary {
+    background-color: #CBD3F2;
+    width: 700px;
+    padding: 10px;
+    border: 3px solid gray;
+    text-align: center;
+}
+
+.experience {
+    background-color: #BFAFC1;
+    width: 1000px;
+    padding: 10px;
+    border: 3px solid black;
+}
+
+.goldslogo {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.vidalogo {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.thelablogo {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.newtonlogo {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 .lamar {
     float: left;
     padding-right: 15px;
