Bio Page Updated

--- a/style.css
+++ b/style.css
@@ -1,1 +1,38 @@
-/* You can style your links page here */
+h1 {
+    color: black; 
+    font-family: 'Raleway', sans-serif;
+}
+ h2 {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    
+}
+ #header {
+    background-color: silver;
+    background-color: transparent;
+    margin: 10px;
+    height: 90px;
+    border-radius: 5px;
+    
+}
+ body {
+    background-image: url(./Linkedin.jpg);
+    background-repeat: no-repeat;
+    background-size: 2000px;
+    
+}
+ .box {
+    width: 450px;
+    background: rgba(0,0,0,0.4);
+    padding: 40px;
+    text-align: center;
+    margin: auto;
+    margin-top: 5%;
+    color: white;
+    font-family: 'Century Gothic', sans-serif;
+}
+ .box h1{
+    font-size: 45px;
+    letter-spacing: 4px;
+    font-weight: 100;
+}
