--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .col {
-  color: white;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;     
   display: inline-block;
   width: 80px;
