added borders and playing around with colors. The design is awful..just playing around with adding features and page layout.

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("../images/dust_scratches.png");
-
+    /* : 0 auto; */
 }
 
 /* ---------------------------------------- */
@@ -9,7 +9,7 @@ body {
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #333333;
-    position: relative;
+    /* position: fixed; */
     display: flex;
 }
 
@@ -32,7 +32,18 @@ main {
 }
 
 h1{ 
-    color: black
+    color: black;
+    /* padding-top: 50px;
+    position: fixed; */
+}
+
+.self {
+    border-radius: 12px;
+    /* position: fixed;  */
+    /* top: 50%;
+    left: 50%;
+    margin-top: -150px;
+    margin-left: -150px; */
 }
 
 h2 {
@@ -46,6 +57,8 @@ h2 {
     padding: 10px;
     border: 3px solid gray;
     text-align: center;
+    border-radius: 12px;
+    margin: auto;
 }
 
 .experience {
@@ -53,6 +66,38 @@ h2 {
     width: 1000px;
     padding: 10px;
     border: 3px solid black;
+    border-radius: 12px;
+    margin: auto;
+}
+
+.edu {
+    background-color: #D8AFB6;
+    width: 700px;
+    padding: 10px;
+    border: 3px solid black;
+    border-radius: 12px;
+    padding-bottom: 30px;
+    margin: auto;
+}
+
+.vol {
+    background-color: #C5BB7A;
+    width: 700px;
+    padding: 10px;
+    border: 3px solid black;
+    border-radius: 12px;
+    padding-bottom: 20px;
+    margin: auto;
+}
+
+.skills {
+    background-color: #BAE5FB;
+    width: 300px;
+    padding: 10px;
+    border: 3px solid black;
+    border-radius: 12px;
+    padding-bottom: 20px;
+    margin: auto;
 }
 
 .goldslogo {
@@ -78,6 +123,7 @@ h2 {
     padding-left: 15px;
     padding-right: 15px;
 }
+
 .lamar {
     float: left;
     padding-right: 15px;
