--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -1,25 +1,46 @@
 body {
-  margin: 0;
-  margin-top: 50px;
-  background-color: #333;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
   text-align: center;
+  align-items: center;
+  margin: auto;
 }
 
-.col {
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;     
-  display: inline-block;
-  width: 80px;
-  height: 80px;
-  text-align: center;
-  background-color: white;
-  margin-top: 2px;
-  font-size: 80px;
-  padding: 10px;
+#tictactoe {
+  margin-top: 4em;
+  display: flex;
+  flex-direction: column;
 }
 
-button {
-  padding: 20px;
-  font-size: 20px;
-  margin-top: 10px;
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.box {
+  padding: 0.3rem;
+  width: 1em;
+  height: 1em;
+  font-size: 5em;
+  text-align: center;
+  border: red solid 3px;
+
+}
+
+.gameboard {
+  margin: auto;
+  align-items: center;
+  text-align: center;
+  vertical-align: middle;
+  border: red, solid, 10px;
+}
+
+.player, .reset {
+  font-size: 1.5rem;
+}
+.clear {
+  border-radius: 0.3rem;
+  background: #f0f0f0;
+  border: 2px solid #a0a0a0;
 }
