--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -1,6 +1,7 @@
-table { 
-  border-collapse: collapse; 
-  border-spacing: 0; 
+body {
+  display: flex;
+  flex-direction: column;
+  background-color: #5b5b5b48;
 }
 
 #gameBoard { 
@@ -12,9 +13,15 @@ table {
 #gameBoard tr td { 
   width: 100px; 
   height: 100px; 
-  border: 1px solid #1c1c1c; 
-  font-family: Helvetica;  
+  border: 1px solid #ababab48; 
+  background-color: #c1c1c1;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
   font-size: 30px; 
   text-align: center; 
+  color: #00ffff6f
 }
- 
+
+input[type='button'] {
+  width: 100px;
+  margin: auto;
+}
