--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   align-items: center;
   height: 101px;
-  background-color: aliceblue;
+  background-color: black;
   margin: 25px;
 }
 
@@ -35,4 +35,26 @@
 #announce-game-won {
   font-size: 50px;
   text-align: center;
+}
+#moves {
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 5%;
+  margin: auto;
+  padding: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  color: black;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  order: 1;
+}
+
+body {
+  background-image: url(./tower.jpg);
+  height: 1200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
