Added towers-of-hanoi game

--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -36,3 +36,28 @@
   font-size: 50px;
   text-align: center;
 }
+
+#reset {
+  margin-left: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 100px;
+  color: white;
+  background-color: purple;
+  border-radius: 10px;
+  font-size: 22px;
+}
+
+#reset:hover {
+  color: black;
+  background-color: orange;
+  cursor: pointer;
+}
+
+#announce-winner {
+  font-size: 48px;
+  font-weight: bold;
+}
