--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,34 +1,52 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.stack-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 [data-stack] {
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  height: 101px;
+  height: 500px;
+  width: 101px;
   background-color: aliceblue;
   margin: 25px;
 }
 
 [data-block] {
-  width: 25px;
-  float: left;
+  /* width: 25px; */
+  height: 25px;
+  /* float: left; */
 }
 
 [data-block="25"] {
-  height: 25px;
+  width: 25px;
   background-color: blue;
 }
 
 [data-block="50"] {
-  height: 50px;
+  width: 50px;
   background-color: green;
 }
 
 [data-block="75"] {
-  height: 75px;
+  width: 75px;
   background-color: red;
 }
 
 [data-block="100"] {
-  height: 100px;
+  width: 100px;
   background-color: yellow;
 }
 
